# monetary_policy_project

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  run_all.py
configs/: project.yml  section_patterns.yml
data/: source_registry.csv
data/dictionaries/: combined_refactor_lexicon.csv  pbc_context_rules.yml  (+1 more)
experiments/: crossfit_tone_market_probe.py  text_pipeline_probe.py
notebooks/: 货币政策沟通与金融市场反应.ipynb
paper/: 引用一致性审计.xlsx  数字一致性审计.xlsx  课程论文_提交版.docx
references/: OFFICIAL_ENGINEERING_BASIS.md  RESEARCH_SEEDS.md
research/: DATA_FEASIBILITY_AUDIT.md  DATA_SOURCE_DECISION.md  FINAL_ANALYSIS_PLAN.md  FINAL_ANALYSIS_PLAN.sha256  JOURNAL_TEMPLATE_AUDIT.md  PRIMARY_ANALYSIS_FREEZE.md  PRIMARY_ANALYSIS_FREEZE.sha256  REVISED_ANALYSIS_PLAN.md  data_source_candidates.csv  data_source_candidates.xlsx  final_analysis_plan.md  final_analysis_plan.sha256  literature_matrix.csv  literature_matrix.xlsx  literature_method_matrix.xlsx  method_alignment.md  project_reference_matrix.csv  project_reference_matrix.xlsx  research_synthesis.md
scripts/: benchmark_daily_egarch_x.py  build_submission.py  export_pdf.py  final_packaging_verification.py  gate_0_1_evidence.py  gate_0_immutable.py  gate_12_verify.py  gate_13_font.py  gate_15_clean.py  gate_23_hash.py  gate_2_prove.py  gate_8_9_verify.py  gate_pdf_table_audit.py  gate_preserve_snapshot.py  generate_table_value_mapping.py  post_repair_visual.py  pre_repair_diagnostics.py  render_visual_review.py  run_daily_egarch_x_locked.py
src/: __init__.py
tests/: test_cover_and_figures.py  test_daily_egarch_x.py  test_delivery_package.py  test_english_abstract.py  test_event_calendar.py  test_event_windows.py  test_final_delivery_consistency.py  test_lexicon.py  test_notebook_execution.py  test_paper_formatting.py  test_paper_numbers.py  test_regressions.py  test_second_refactor_requirements.py  test_section_parser.py  test_sentiment.py  test_similarity.py  test_stock_returns.py  test_stock_volatility.py  test_table_rules.py  test_text_cleaner.py  test_text_validation_pipeline.py  test_yield_curve.py
(+413 files in other folders)
